# Smart_Dom

COnsole/: README.md
COnsole/Client/: CMakeLists.txt  main.cpp
COnsole/Serwer/: CMakeLists.txt  Dockerfile  door.cpp  door.h  gate_and_garage.cpp  gate_and_garage.h  main.cpp  monitoring.cpp  monitoring.h  pet_feeder.cpp  pet_feeder.h  roller_shutter.cpp  roller_shutter.h  smart_home_logic.cpp  smart_home_logic.h  thermostat.cpp  thermostat.h
